--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
  <p>As Branquelas é um fime de comédia que envolve dois policiais do fbi</p>   
 <h2>Meus personagens pricipais</h2>
 <ul>
-<li>Kevin, Marcos</li>
-
+<li>Kevin</li>
+<li> marcos</li>
 
 
 
